--- a/crates/weave-crdt/Cargo.toml
+++ b/crates/weave-crdt/Cargo.toml
@@ -8,7 +8,7 @@ test-helpers = []
 
 [dependencies]
 automerge = "0.5.12"
-sem-core = { path = "../../../sem/crates/sem-core" }
+sem-core = { git = "https://github.com/Ataraxy-Labs/sem", version = "0.2" }
 weave-core = { path = "../weave-core" }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
