--- a/crates/weave-cli/Cargo.toml
+++ b/crates/weave-cli/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "weave-cli"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 [dependencies]
@@ -10,3 +10,4 @@ sem-core = { git = "https://github.com/Ataraxy-Labs/sem", version = "0.2" }
 clap = { version = "4", features = ["derive"] }
 colored = "2"
 diffy = "0.4"
+serde_json = "1"
