--- a/crates/weave-cli/Cargo.toml
+++ b/crates/weave-cli/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.4"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 
+[[bin]]
+name = "weave"
+path = "src/main.rs"
+
 [dependencies]
 weave-core = { path = "../weave-core" }
 weave-crdt = { path = "../weave-crdt" }
